--- a/about.html
+++ b/about.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Access Granted</title>
+	<meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
 	<link rel='shortcut icon' href="assets/images/logo.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>About Us | Access Granted</title>
+    <title>Access Granted | About Us </title>
 </head>
 
 <body class="relative">
@@ -27,98 +28,19 @@
 			  <span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarContent">
-			  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item">
-				  <a class="nav-link" href="resources.html">Resources</a>
+			  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				<li class="nav-item mt-2">
+				  <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
 				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="about.html">About</a>
+				<li class="nav-item mt-2">
+				  <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
 				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="contact.html">Contact</a>
+				<li class="nav-item mt-2">
+				  <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
 				</li>
-				<li class="nav-item dropdown">
-				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-					aria-expanded="false">
-					Accessibility Features
-				  </a>
-				  <ul class="dropdown-menu p-3" aria-labelledby="navbarDropdown" style="width: 300px;">
-					<li>
-					  <div class="dropdown-item">
-						<label for="fontSize" class="form-label">Font Size</label>
-						<input type="range" class="form-range font-size-control" id="fontSize" min="12" max="24" step="1"
-						  value="16">
-					  </div>
-					</li>
-					<li>
-					  <div class="dropdown-item">
-						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="dyslexicFont">
-						  <label class="form-check-label" for="dyslexicFont">Dyslexic Font</label>
-						</div>
-					  </div>
-					</li>
-					<li>
-					  <div class="dropdown-item">
-						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="highContrast">
-						  <label class="form-check-label" for="highContrast">High Contrast</label>
-						</div>
-					  </div>
-					</li>
-					<li>
-					  <div class="dropdown-item">
-						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="simplifiedLayout">
-						  <label class="form-check-label" for="simplifiedLayout">Simplified Layout</label>
-						</div>
-					  </div>
-					</li>
-					<li>
-					  <div class="dropdown-item">
-						<label for="colorblindMode" class="form-label">Colorblind Mode</label>
-						<select class="form-select" id="colorblindMode" aria-label="Colorblind mode">
-						  <option selected value="">Normal Vision</option>
-						  <option value="deuteranopia">Deuteranopia</option>
-						  <option value="protanopia">Protanopia</option>
-						  <option value="tritanopia">Tritanopia</option>
-						</select>
-					  </div>
-					</li>
-					<li>
-					  <div class="dropdown-item">
-						<div class="form-check form-switch">
-						  <input class="form-check-input" type="checkbox" id="voiceControl">
-						  <label class="form-check-label" for="voiceControl">Voice Control</label>
-						</div>
-					  </div>
-					</li>
-					<li>
-					  <hr class="dropdown-divider">
-					</li>
-					<li><a class="dropdown-item" href="accessibility-guide.html">Accessibility Guide</a></li>
-					<li>
-					  <div class="dropdown-item">
-						<label for="themeSelect" class="form-label">Theme</label>
-						<select class="form-select" id="themeSelect" aria-label="Theme select">
-						  <option value="auto" data-bs-theme-value="auto">Auto</option>
-						  <option value="light" data-bs-theme-value="light">Light</option>
-						  <option value="dark" data-bs-theme-value="dark">Dark</option>
-						  <option value="contrast" data-bs-theme-value="contrast">High Contrast</option>
-						</select>
-					  </div>
-					</li>
-					<li>
-					  <div class="dropdown-item">
-						<label for="fontThemeSelect" class="form-label">Font Theme</label>
-						<select class="form-select" id="fontThemeSelect" aria-label="Font theme select">
-						  <option value="default" data-font-theme-value="default">Default</option>
-						  <option value="dyslexic" data-font-theme-value="dyslexic">Open Dyslexic</option>
-						</select>
-					  </div>
-					</li>
-				  </ul>
-				</li>
+				<li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
+					data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
+					  class="fas fa-universal-access"></i> Accessibility</button></li>
 			  </ul>
 			</div>
 		  </div>
