--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     </nav>
   </header>
 
+  <!-- Back to top button -->
+  <a href="#" class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none z-3" role="button"
+    aria-label="Back to top" style="z-index: 1030;">
+    <i class="fas fa-arrow-up"></i>
+  </a>
+  <script>
+  </script>
+
+  <!-- Accessibility Settings sidebar -->
   <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
     aria-labelledby="offcanvasWithBothOptionsLabel">
     <div class="offcanvas-header">
@@ -247,9 +256,6 @@
           </ul>
         </div>
       </div>
-      <p class="float-end mb-1">
-        <a href="#"><i class="fas fa-arrow-up"></i> Back to top</a>
-      </p>
       <p class="mb-1">&copy; 2024 Access Granted Project</p>
     </div>
   </footer>
