--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="description"
+    content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
   <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
   <link rel='shortcut icon' href="assets/images/logo.webp">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -53,8 +54,6 @@
     aria-label="Back to top" style="z-index: 1030;">
     <i class="fas fa-arrow-up"></i>
   </a>
-  <script>
-  </script>
 
   <!-- Accessibility Settings sidebar -->
   <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
@@ -151,7 +150,7 @@
 
     <div class="album py-5" id="features">
       <div class="container mt-5">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-3 g-4">
           <div class="col">
             <div class="card h-100 shadow-lg border-0 bg-feature-card">
               <img src="assets/images/microphone-icon.webp" class="card-img-top" alt="Feature 1 illustration">
