--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <title>Access Granted | About Us </title>
 </head>
 
-<body class="relative">
+<body class="relative" style="background-color: #fcd9cb;">
 	<a href="#main-content" class="d-none">Skip to main content</a>
     
 	<header class="fixed-top">
@@ -48,11 +48,11 @@
 	  </header>
 	
 
-	<main class="container my-5">
+	  <main class="container my-5">
 		<section>
-		  <div class="row">
-			<div class="col-md-6">
-			  <img src="team.jpg" alt="Our Team" class="img-fluid rounded shadow-lg">
+		  <div class="row align-items-center">
+			<div class="col-md-6 mb-4 mb-md-0">
+			  <img src="assets/images/locky.webp" alt="Our Team" class="img-fluid rounded" height="400" width="400">
 			</div>
 			<div class="col-md-6">
 			  <h2>Our Mission</h2>
@@ -70,23 +70,98 @@
 			<h2 class="text-center mb-4">Meet Our Team</h2>
 			<div class="row g-4">
 				<!-- Card 1 -->
-				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<div class="card shadow-lg text-center flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="ceo.jpg" class="card-img-top" alt="">
+								<img src="assets/images/avatars/Vernell.webp" class="card-img-top" alt="Vernell Clark">
 								<div class="card-body">
 									<h5 class="card-title">Vernell Clark</h5>
-									<p class="card-text">Project lead and git/github expert</p>
+									<p class="card-text">SCRUM Leader</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>SCRUM Leader</p>
+									<a href="https://github.com/VCGithubCode" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://www.linkedin.com/in/vernell-clark-swe/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Card 2 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/avatars/Nikola.webp" class="card-img-top" alt="Nikola Simic">
+								<div class="card-body">
+									<h5 class="card-title">Nikola Simic</h5>
+									<p class="card-text">Voice Assistant</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>Voice Assistant</p>
+									<a href="https://github.com/nlekkerman" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Card 3 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/avatars/Ben.webp" class="card-img-top" alt="Benjamin Schäfer">
+								<div class="card-body">
+									<h5 class="card-title">Benjamin Schäfer</h5>
+									<p class="card-text">Research & Page Layout & Presentation</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>Research & Page Layout & Presentation</p>
+									<a href="https://github.com/benschaf" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://www.linkedin.com/in/beni-schaefer/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Card 4 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/avatars/Angela.webp" class="card-img-top" alt="Angela Siniavskaja">
+								<div class="card-body">
+									<h5 class="card-title">Angela Siniavskaja</h5>
+									<p class="card-text">ReadMe & Documentation Lead</p>
 								</div>
 							</div>
 							<div class="flip-card-back">
 								<div class="card-body">
 									<p>Project lead and git/github expert</p>
-									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+									<a href="https://github.com/Angela-Sin" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-github"></i> GitHub
 									</a>
-									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+									<a href="https://www.linkedin.com/in/angela-siniavskaja-a4500a22b/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-linkedin"></i> LinkedIn
 									</a>
 								</div>
@@ -94,98 +169,71 @@
 						</div>
 					</div>
 				</div>
-	
-				<!-- Card 2 -->
-				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+				<!-- Card 5 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<div class="card shadow-lg text-center flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="ceo.jpg" class="card-img-top" alt="">
-								<div class="card-body">
-									<h5 class="card-title">Nikola Simic</h5>
-									<p class="card-text">aaaaa</p>
-								</div>
-							</div>
-							<div class="flip-card-back">
-								<div class="card-body">
-									<p>aaaa</p>
-									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
-										<i class="bi bi-github"></i> GitHub
-									</a>
-									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
-										<i class="bi bi-linkedin"></i> LinkedIn
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-	
-				<!-- Card 3 -->
-				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="card shadow-lg text-center flip-card">
-						<div class="flip-card-inner">
-							<div class="flip-card-front">
-								<img src="ceo.jpg" class="card-img-top" alt="">
-								<div class="card-body">
-									<h5 class="card-title">Benjamin Schäfer</h5>
-									<p class="card-text">aaaaa</p>
-								</div>
-							</div>
-							<div class="flip-card-back">
-								<div class="card-body">
-									<p>aaaa</p>
-									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
-										<i class="bi bi-github"></i> GitHub
-									</a>
-									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
-										<i class="bi bi-linkedin"></i> LinkedIn
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-	
-				<!-- Card 4 -->
-				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="card shadow-lg text-center flip-card">
-						<div class="flip-card-inner">
-							<div class="flip-card-front">
-								<img src="ceo.jpg" class="card-img-top" alt="">
-								<div class="card-body">
-									<h5 class="card-title">Angela Siniavskaja</h5>
-									<p class="card-text">aaaa</p>
-								</div>
-							</div>
-							<div class="flip-card-back">
-								<div class="card-body">
-									<p>aaaaa</p>
-									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
-										<i class="bi bi-github"></i> GitHub
-									</a>
-									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
-										<i class="bi bi-linkedin"></i> LinkedIn
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="card shadow-lg text-center flip-card">
-						<div class="flip-card-inner">
-							<div class="flip-card-front">
-								<img src="ceo.jpg" class="card-img-top" alt="">
+								<img src="assets/images/avatars/Ashraf.webp" class="card-img-top" alt="Ashraf Bocktor">
 								<div class="card-body">
 									<h5 class="card-title">Ashraf Bocktor</h5>
-									<p class="card-text">aaaa</p>
+									<p class="card-text">Produce Avatars</p>
 								</div>
 							</div>
 							<div class="flip-card-back">
 								<div class="card-body">
-									<p>aaaaa</p>
-									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+									<p>Produce Avatars</p>
+									<a href="https://github.com/PATH-HIVE" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://www.linkedin.com/in/abbocktor/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Card 6 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/avatars/Alison.webp" class="card-img-top" alt="Alison Mossop">
+								<div class="card-body">
+									<h5 class="card-title">Alison Mossop</h5>
+									<p class="card-text">404 Page</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>Project lead and git/github expert</p>
+									<a href="https://github.com/ali-moss-24" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://www.linkedin.com/in/alison-mossop-4658a5253/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Card 7 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="assets/images/avatars/James.webp" class="card-img-top" alt="James Bracken">
+								<div class="card-body">
+									<h5 class="card-title">James Bracken</h5>
+									<p class="card-text">Footer & Support</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>Footer & Support</p>
+									<a href="https://github.com/JamesBracken" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-github"></i> GitHub
 									</a>
 									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
@@ -196,23 +244,24 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+				<!-- Card 8 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<div class="card shadow-lg text-center flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="ceo.jpg" class="card-img-top" alt="">
+								<img src="assets/images/avatars/Vernell.webp" class="card-img-top" alt="Ahmad Al Hindi">
 								<div class="card-body">
 									<h5 class="card-title">Ahmad Al Hindi</h5>
-									<p class="card-text">aaaa</p>
+									<p class="card-text">About Page</p>
 								</div>
 							</div>
 							<div class="flip-card-back">
 								<div class="card-body">
-									<p>aaaaa</p>
-									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+									<p>Project lead and git/github expert</p>
+									<a href="https://github.com/Ahmadalhindi" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-github"></i> GitHub
 									</a>
-									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+									<a href="https://www.linkedin.com/in/ahmad-al-hindi-899877108/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-linkedin"></i> LinkedIn
 									</a>
 								</div>
@@ -275,8 +324,16 @@
 		</defs>
 	  </svg>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.js"></script>
+  <!-- Fontawesome icons -->
+  <script src="https://kit.fontawesome.com/8f0b8db894.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom Script -->
+  <script src="assets/js/script.js"></script>
+  <!-- Theme Switcher Script -->
+  <script src="assets/js/theme-switcher.js"></script>
+  <!-- Toggle navigation bar background -->
+  <script src="assets/js/navbar-background-toggler.js"></script>
 
 </body>
 </html>
