--- a/404.html
+++ b/404.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Error 404 page.">
-	<meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
-    <title>404 - Page Not Found | Access Granted</title>
+	  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+    <!-- Link head tags -->
+    <link rel='shortcut icon' href="assets/images/logo.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
+    <!-- Left out CSS stylesheet link as 404.css stylesheet is linked below -->
     <link rel="stylesheet" href="assets/css/404.css">
+    <title>Access Granted | 404 - Page Not Found </title>
+
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
