--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
   <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
     <title>Access Granted | About Us </title>
 </head>
 
