--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Get into contact with us now!">
 	<meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all, contact">
+	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<title>Contact Us | Access Granted</title>
+	<title>Access Granted | Contact Us</title>
 	<!-- Script from previous head iteration, Not sure if it should be here or at bottom of the page..  -->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 	</script>
