--- a/thank-you.html
+++ b/thank-you.html
@@ -7,6 +7,7 @@
 	<meta name="description"
 		content="Explore access granted's accessibility, inclusivity and availability for all. Thank you for your message">
 	<meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
